# StockBook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-rag.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: backup.py  calc.py  config.py  database.py  main.py  models.py  quotes.py  schemas.py  seed.py  services.py  snapshot_service.py
app/rag/: ask.py  embed.py  limiter.py  notion.py  snapshot.py  store.py
app/routers/: api.py  pages.py  rag.py
docs/: architecture.md
docs/superpowers/plans/: 2026-05-31-notion-rag-qa.md  2026-06-01-backup-hardening.md  2026-06-01-datasource-interfaces.md  2026-06-01-test-infra.md  2026-06-02-backup-encryption-v2.md  2026-06-02-backup-encryption.md  2026-06-02-benchmark-history-and-trends-redesign.md  2026-06-02-history-performance.md
docs/superpowers/specs/: 2026-05-29-stockbook-strategy-tracker-design.md  2026-05-31-stockbook-rag-qa-design.md  2026-06-01-stockbook-backup-hardening-design.md  (+5 more)
static/css/: style.css
static/js/: app.js  common.js  rag.js
templates/: _rag_widget.html  base.html  index.html
tests/: conftest.py  test_api.py  test_backup.py  test_backup_crypto.py  test_backup_restore.py  test_benchmark.py  test_calc.py  test_calc_performance.py  test_calc_properties.py  test_history_api.py  test_quotes.py  test_rag_api.py  test_rag_ask.py  test_rag_embed.py  test_rag_notion.py  test_rag_store.py  test_snapshot_service.py  test_system_e2e.py
